<resources>
    <string name="app_name">Login</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="SignIn">SignIn</string>
    <string name="SignUp">SignUp</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="password1">password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="welcome_to_gamegraphy">Welcome to GameGraphy!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cool_cat">Cool Cat</string>
    <string name="_13_hrs">13 hrs</string>
    <string name="first_post_of_gamegraphy">First Post of GameGraphy!</string>
    <string name="_20">20</string>
    <string name="_8_comments">8 Comments</string>
    <string name="todo">TODO</string>
    <string name="cool_cat2">Cool CaT</string>
    <string name="_113">113</string>
    <string name="followers">Followers</string>
    <string name="_150">150</string>
    <string name="following">Following</string>
    <string name="_100">100</string>
    <string name="likes">Likes</string>
    <string name="posts">Posts</string>
    <string name="_25">25</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="todo3">TODO</string>
    <string name="todo2">TODO</string>
    <string name="postsitem">Posts</string>
    <string name="gamesitem">Games</string>
    <string name="Join_with_us">Join with us</string>
    <string name="Dont_have_account">Don\'t Have An Account</string>
    <string name="Register_Here">Register Here</string>
    <string name="Allready_have_account">Already Have An Account</string>
    <string name="commented_on_your_post">commented on your post</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="select_file">select_file</string>
    <string name="post_btn">post_btn</string>
    <string name="post_image">post_image</string>
    <string name="enter_text_here_to_post">enter_text_here_to_post</string>
    <string name="new_post">new_post</string>
    <string name="create_new_post">create_new_post</string>
    <string name="logout">logout</string>
    <string name="create_a_new_post">Create A New Post</string>
    <string name="game_name">Game Name</string>
    <string name="heading">Heading</string>
    <string name="hintComment">Comment...</string>
    <string name="Comment">This is a comment</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="Search">Search For Users</string>
    <string name="usernamev">UserName</string>
    <string name="real_name">Real Name</string>
    <string name="follow">Follow</string>


</resources>