<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#484848"
    tools:context=".profileFragment">


    <ImageView
        android:id="@+id/coverimg"
        android:layout_width="396dp"
        android:layout_height="159dp"
        android:background="@drawable/coverimg"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/profilePic"
        android:layout_width="138dp"
        android:layout_height="138dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/profile_picture"
        android:scaleType="fitCenter"
        android:src="@drawable/defualt_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coverimg" />

    <TextView
        android:id="@+id/accUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePic" />

    <LinearLayout
        android:id="@+id/pro_detail"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/accUserName">

        <TextView
            android:id="@+id/no_of_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/followerstag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/followers"
            android:textColor="#BDBDBD"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/mo_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/followingtag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/following"
            android:textColor="#BDBDBD"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/no_of_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/likestag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/likes"
            android:textColor="#BDBDBD"
            android:textSize="17sp" />

    </LinearLayout>

    <Button
        android:id="@+id/edit_profile"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:background="@drawable/background_btn"
        android:backgroundTint="@color/grey"
        android:text="@string/edit_profile"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pro_detail"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/logout"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:background="@drawable/background_btn"
        android:backgroundTint="@color/grey"
        android:text="@string/logout"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_profile"
        app:layout_constraintTop_toBottomOf="@+id/pro_detail"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/feedView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/logout"
        app:spanCount="1"
        tools:layout_editor_absoluteX="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
