<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/LightDark"
    android:padding="5dp"
    android:layout_marginTop="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgProfilePic"
            android:layout_width="104dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/profiledefault" />

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usernamev"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/real_name"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/btnFollow"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:background="#0190FF"
            android:text="@string/follow"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>